# microservicio_completo

./: .env  docker-compose.yml
API_GATEWAY/: .dockerignore  .env  Dockerfile  build.gradle
AgenteIA/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  pyproject.toml  requirements.txt  schema.sql
AgenteIA/app/agent/: DockerFile  __init__.py  gemini_function_calling.py  value_extractor.py
AgenteIA/app/agent/core/: agent_core.py  memory_context.py  reasoning_engine.py  schema_extractor.py  semantic_selector.py  tool_manager.py
AgenteIA/app/agent/registry/: __init__.py  semantic_registry.py
AgenteIA/app/agent/system_prompt/: base_prompt.py  enhanced_prompt.py  rules.md
AgenteIA/app/api/: .dockerignore  DockerFile  __init__.py  __main__.py  api.py
AgenteIA/app/cache/: semantic_index.json
AgenteIA/app/client/: DockerFile  __init__.py  client_mcp.py  mcp_http_client.py
AgenteIA/app/config/: __init__.py  config.py  prompts.py
AgenteIA/app/core/: errors.py  simple_cache.py  tool_parallelizer.py
AgenteIA/app/models/: mcp_models.py
AgenteIA/app/server/: DockerFile  __init__.py  __main__.py  server_mcp.py
AgenteIA/app/utils/: fuzzy_matcher.py  json_normalizer.py  logging_config.py
AgenteIA/docs/: MCP_AGENT_TECHNICAL_DOCUMENTATION.md
Frontend_Electiva_3/: angular.json
Microservice_Reserva_Aerolinea/: Dockerfile  README.md  build.gradle  settings.gradle
Microservicio_Notificaciones/: .gitignore  Dockerfile  build.gradle  settings.gradle
Microservicio_Usuarios_Aerolinea/: Dockerfile  build.gradle  settings.gradle
microservice-pago/: README.md  (+4 more)
(+276 files in other folders)
