[project]
name = "agentecongemini"
version = "0.1.0"
description = "Sistema de gestión de aviones con agente IA usando MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.9.1",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "mcp>=1.12.3",
    "mirascope[google]>=1.25.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
    "google-genai>=1.28.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "openai>=1.0.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
